--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,15 +1,15 @@
-#HTACCESS FOR AUBEPIN.FR | TIMOTHEE DORAND FEV 2017
-# Disable the server signature
-ServerSignature Off
-
-RewriteEngine on
-RewriteRule ^(.*)\.html$ $1.php [nc]
-
-# Display custom error pages
-ErrorDocument 400 /errors/400.html
-ErrorDocument 404 /errors/404.html
-ErrorDocument 500 /errors/500.html
-
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.php [NC,L]
+##HTACCESS FOR AUBEPIN.FR | TIMOTHEE DORAND FEV 2017
+## Disable the server signature
+#ServerSignature Off
+#
+#RewriteEngine on
+#RewriteRule ^(.*)\.html$ $1.php [nc]
+#
+## Display custom error pages
+#ErrorDocument 400 /errors/400.html
+#ErrorDocument 404 /errors/404.html
+#ErrorDocument 500 /errors/500.html
+#
+#RewriteEngine On
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteRule ^([^\.]+)$ $1.php [NC,L]
